# mdsetup

./: .cookiecutter.json  .cruft.json  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  codecov.yml  noxfile.py  pyproject.toml
.github/workflows/: labeler.yml  tests.yml
docs/: conf.py  index.md  reference.md  usage.md
src/mdsetup/: __init__.py  __main__.py  cli.py
src/mdsetup/commands/: __init__.py  cmd_create.py  cmd_setup.py  cmd_solvate.py
src/mdsetup/libs/: __init__.py  template.py  utils.py
src/mdsetup/templates/amber/leap/: tleap.jinja
src/mdsetup/templates/amber/scripts/: equilibrate.jinja  production.jinja
tests/: __init__.py  datafile.py  test_main.py
tests/commands/: __init__.py  test_create.py  test_setup.py  test_solvate.py
